<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="ConfActivityBinding">

        <variable
            name="model"
            type="by.offvanhooijdonk.plaincalendar.widget.ui.configure.ConfigureViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/blockPickCalendars"
                    style="@style/BlockWithBackground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="0dp">

                    <LinearLayout
                        android:id="@+id/blockCalendarsIcons"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toStartOf="@id/btnPickCalendars"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <TextView
                        android:id="@+id/txtNoCalSelected"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/number_no_widgets"
                        android:textSize="16sp" />

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        app:icon="@drawable/ic_edit_calendar_24" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/blockIconAndSettings"
                    style="@style/BlockWithBackground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/blockPickCalendars"
                    android:paddingTop="0dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:focusableInTouchMode="true"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:labelFor="@id/inputDaysForEvents"
                            android:text="@string/widget_settings_days" />

                        <EditText
                            android:id="@+id/inputDaysForEvents"
                            android:layout_width="32dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:inputType="number"
                            android:text="@string/fish_days"
                            android:textAlignment="textEnd" />

                        <com.google.android.material.button.MaterialButton
                            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:text="@string/increment_days"
                            android:textSize="18sp" />

                        <com.google.android.material.button.MaterialButton
                            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:text="@string/decrement_days"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        app:icon="@drawable/ic_tune_24" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/blockBottomSettings"
                    android:layout_below="@id/blockIconAndSettings"
                    android:gravity="center_horizontal|center_vertical">

                    <fragment
                        android:id="@+id/fragPreviewWidget"
                        class="by.offvanhooijdonk.plaincalendar.widget.ui.configure.preview.PreviewWidgetFragment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <FrameLayout
                    android:id="@+id/blockExpandableSettings"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_below="@id/blockIconAndSettings">

                    <fragment
                        android:id="@+id/fragExtendedSettings"
                        class="by.offvanhooijdonk.plaincalendar.widget.ui.configure.settings.ExtendedSettingsFragment"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </FrameLayout>

                <LinearLayout
                    android:id="@+id/blockBottomSettings"
                    style="@style/BlockWithBackground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/settings_block_minor_padding"
                    android:paddingBottom="@dimen/settings_block_minor_padding">

                    <FrameLayout
                        android:id="@+id/placeholderSettings"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/settings_values_block_height" />

                    <HorizontalScrollView
                        android:id="@+id/blockSettingsTitles"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/settings_titles_block_height"
                        android:scrollbars="none">

                        <RadioGroup
                            android:id="@+id/groupSettings"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/radioBack"
                                style="@style/SettingsItem"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:button="@null"
                                android:text="@string/widget_settings_background" />

                            <View style="@style/SettingsDivider" />

                            <RadioButton
                                android:id="@+id/radioOpac"
                                style="@style/SettingsItem"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:button="@null"
                                android:text="@string/widget_settings_opacity" />

                            <View style="@style/SettingsDivider" />

                            <RadioButton
                                android:id="@+id/radioCorners"
                                style="@style/SettingsItem"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:button="@null"
                                android:text="@string/widget_settings_corners" />

                            <View style="@style/SettingsDivider" />

                            <RadioButton
                                android:id="@+id/radioTextColor"
                                style="@style/SettingsItem"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:button="@null"
                                android:text="@string/widget_settings_date_color" />

                            <View style="@style/SettingsDivider" />

                            <RadioButton
                                android:id="@+id/radioTextSize"
                                style="@style/SettingsItem"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:button="@null"
                                android:text="@string/widget_settings_text_size" />
                        </RadioGroup>
                    </HorizontalScrollView>
                </LinearLayout>

            </RelativeLayout>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fabCreateWidget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="@dimen/activity_h_padding"
                android:layout_marginBottom="128dp"
                android:src="@drawable/ic_done_24dp"
                app:fabSize="normal" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <LinearLayout
            android:id="@+id/viewNoWidgets"
            visible="@{model.widgetId == null}"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/md_white_1000"
            android:gravity="center"
            android:orientation="vertical"
            tools:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_widgets_yet" />
        </LinearLayout>
    </FrameLayout>
</layout>
